# market-map

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
fe-mm/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
fe-mm/src/: App.tsx  config.ts  index.css  main.tsx
fe-mm/src/layouts/: MainLayout.tsx  ProfileDropdown.tsx  SideBar.tsx  TopBar.tsx
fe-mm/src/pages/: AdminUsers.tsx  Home.tsx  Login.tsx  ProfileSettings.tsx  Signup.tsx
fe-mm/src/store/: useAuthStore.ts  useNavStore.ts  useSearchStore.ts  (+2 more)
market-map-backend/: .env  Cargo.toml  db.sqlite  docker-compose.yml  marketmap.db  marketmap_copy.db  marketmap_final.db  marketmap_new.db
market-map-backend/.sqlx/: query-4a4dcac947224ad0218eaf278bd9e86f840b69418966f3fbde1b347934872e84.json  query-d7d8bfb0d1a1a24ff261d822c2f4ed98a37458ac9d8c9f0d775d46187968940b.json  query-d879d3e03adbad5280d119d2413b8076b43ad1bc3a5092ce1475eacca62e2834.json  query-f5b44e2f7b16f93384ab878bac440257d5844ae2b564fd3cc6e3d812575107af.json  query-fd29e5539c03b1d874e9f0805b24bdee2062f7bb6e14d0344a45f507d02843e8.json
market-map-backend/crates/api/: Cargo.toml
market-map-backend/crates/api/src/: main.rs
market-map-backend/crates/scraper/: Cargo.toml
market-map-backend/crates/scraper/src/: main.rs
market-map-backend/crates/shared/: Cargo.toml
market-map-backend/crates/shared/src/: lib.rs
market-map-backend/crates/shared/src/models/: mod.rs  product.rs  user.rs
market-map-backend/migrations/: 20260119093610_create_products_table.sql  20260119175324_add_image_url_to_products.sql  20260119194201_add_previous_price_to_products.sql  20260119200011_create_users_table.sql  20260119200125_create_users_table.sql  init.sql
(+3 files in other folders)
