[workspace]
members = [
    "crates/api",
    "crates/scraper",
    "crates/shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "macros", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Aligned to 0.3.1 to match SQLx's internal requirement
bigdecimal = { version = "0.3.1", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"