[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
axum = "0.7"
serde = { workspace = true }
sqlx = { workspace = true }
shared = { path = "../shared" }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tower-http = { version = "0.6.8", features = ["cors"] }
bcrypt = "0.18.0"
serde_json.workspace = true
