[package]
name = "market-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18" # The HTML parsing crate
tokio.workspace = true
serde.workspace = true
sqlx = { workspace = true }
dotenvy.workspace = true
anyhow.workspace = true
bigdecimal.workspace = true
